Include description for SEO

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="The top library for 3D-printable balisong mods. Download free custom scales, inserts, spacers and more for your favorite balisongs and balisong clones.">
   <link rel="icon" type="image/png" href="favicon.png">
   <title>BaliMods – Open Library of 3D‑Printable Balisong Mods</title>
   <style>
