--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="The top library for 3D-printable balisong mods. Download free custom scales, inserts, spacers and more for your favorite balisongs and balisong clones.">
+  <meta name="google-site-verification" content="idRVCOHB1BpbGZtk0Dw0eTnlh68vtSwPliiE8nwRdjg" />
   <link rel="icon" type="image/png" href="favicon.png">
   <title>BaliMods – Open Library of 3D‑Printable Balisong Mods</title>
   <style>
