--- a/index.html
+++ b/index.html
@@ -785,5 +785,6 @@ document.addEventListener('DOMContentLoaded', () => {
   renderGuides();
 });
 </script>
+<script src="https://cdn.counter.dev/script.js" data-id="5a512eb1-9394-4b80-b778-9b1cbbac97e9" data-utcoffset="2"></script>
 </body>
 </html>
