Add content and update SEO

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="The top library for 3D-printable balisong mods. Download free custom scales, inserts, spacers and more for your favorite balisongs and balisong clones.">
+  <meta name="description" content="The top library for 3D printed balisong mods. Download free custom scales, inserts, spacers and more for your favorite balisongs and balisong clones.">
   <meta name="google-site-verification" content="idRVCOHB1BpbGZtk0Dw0eTnlh68vtSwPliiE8nwRdjg" />
+  <meta name="msvalidate.01" content="664F0D58EABCC203534F54A54A9A0503" />
   <link rel="icon" type="image/png" sizes="192x192" href="favicon.png">
   <title>BaliMods – Open Library of 3D‑Printable Balisong Modifications</title>
   <style>
@@ -356,7 +357,7 @@
   <main>
     <section class="hero" id="home">
       <h2>Open Library of 3D-Printable Balisong Mods</h2>
-      <p>A community-maintained collection of 3D printable inserts, scales, spacers, and other tweaks for your balisongs. Find your mod, print it, and flip it. Welcome to the workshop.</p>
+      <p>Community-maintained collection of 3D printable inserts, scales, spacers, and other tweaks for your balisongs. Find your mod, print it, and flip it.</p>
       <a href="#library" class="cta">Jump to Library</a>
       <a href="#guides" class="cta secondary">Read the Guides</a>
     </section>
@@ -528,8 +529,30 @@ document.addEventListener('DOMContentLoaded', () => {
       description: 'A 3D printed stand that can hold up to 8 balisongs and two oils, by @g3nn0suk3.',
       thingiverse: 'https://www.thingiverse.com/thing:7008125',
       mirror: '',
-      image: 'images/balisong_stand.webp',
+      image: 'images/balisong_stand.jpg',
       dateAdded: '2025-01-01'
+    },
+    {
+      id: 'm13',
+      name: 'Squid Industries Kraken Trainer Inserts',
+      brand: 'Squid Industries',
+      type: 'original',
+      description: 'Inserts for the Squid Industries Krake Raken trainer blade by @MilsimMechanic. Best printed out of TPU.',
+      thingiverse: 'https://cults3d.com/en/3d-model/game/squid-industries-krake-raken-trainer-inserts',
+      mirror: '',
+      image: 'images/kraken_inserts.jpg',
+      dateAdded: '2025-08-04'
+    },
+    {
+      id: 'm14',
+      name: 'Kraken Pocket Clip & Baliboot',
+      brand: 'Generic',
+      type: 'other',
+      description: 'Baliboot and pocket clip for Squid Industries Krake Raken by @CYKLER.',
+      thingiverse: 'https://www.printables.com/model/869540-krake-raken-baliboot-and-pocket-clip',
+      mirror: '',
+      image: 'images/kraken_clip.png',
+      dateAdded: '2025-07-01'
     }
   ];
 
